Add weather icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <section class="forecast">
     <p class="city"></p>
+    <img src="" alt="" class="icon">
     <p class="weather"></p>
     <p class="temperature"></p>
   </section>
