Add temperature unit toggler

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <img src="" alt="" class="icon">
       <p class="weather"></p>
       <p class="temperature"></p>
+      <button>switch to celcius</button>
     </section>
   </main>
 </body>
