Add loading animation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="style.css">
   <script src="app.js" defer></script>
   <title>weather</title>
@@ -30,6 +31,7 @@
       </form>
     </section>
     <section class="forecast">
+      <div class="loader"><span class="material-symbols-outlined">cached</span></div>
       <p class="error"></p>
       <h1 class="city"></h1>
       <img src="" alt="" class="icon">
